--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <!-- Create a webpage with a 16x16 grid of square divs. -->
 
     <!-- Container that will hold my divs -->
-     <div class="container"></div>
+     <div class="border">
+        <div class="container"></div>
+        <div class="title">Etch-a-Sketch</div>
+     </div>
     
 
 
@@ -23,9 +26,9 @@
         //for loop we need 256 grids to 
         for(let i = 1; i <= 256; i++){
             let gridDiv = document.createElement("div");
-            gridDiv.style.border = "5px solid black";
-            gridDiv.style.margin = "5px";
-            gridDiv.style.padding = "10px"
+            gridDiv.style.border = ".1px solid black";
+            gridDiv.style.padding = "10px";
+            gridDiv.style.backgroundColor = "white" //If mouse hovers over div, change backround color to black
             container.append(gridDiv);
         }
 
